Fix missing dependency and wrong used Java version